add google-workspace mcp to runner
Signed-off-by: Michael Clifford <mcliffor@redhat.com>

add google drive integration to session frontend

Signed-off-by: Michael Clifford <mcliffor@redhat.com>

update operator to mount mcp configs

Signed-off-by: Michael Clifford <mcliffor@redhat.com>

update credentials file location and fields

Signed-off-by: Michael Clifford <mcliffor@redhat.com>

more config file wrangling

Signed-off-by: Michael Clifford <mcliffor@redhat.com>

google mcp docs update

Signed-off-by: Michael Clifford <mcliffor@redhat.com>

--- a/components/manifests/base/operator-deployment.yaml
+++ b/components/manifests/base/operator-deployment.yaml
@@ -83,6 +83,19 @@ spec:
               name: ambient-admin-langfuse-secret
               key: LANGFUSE_SECRET_KEY
               optional: true  # Optional: only needed if Langfuse enabled
+        # Google OAuth client credentials for workspace-mcp
+        - name: GOOGLE_OAUTH_CLIENT_ID
+          valueFrom:
+            secretKeyRef:
+              name: google-workflow-app-secret
+              key: GOOGLE_OAUTH_CLIENT_ID
+              optional: true
+        - name: GOOGLE_OAUTH_CLIENT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: google-workflow-app-secret
+              key: GOOGLE_OAUTH_CLIENT_SECRET
+              optional: true
         resources:
           requests:
             cpu: 50m
