feat: Add OpenAPI spec infrastructure with swaggo
Phase 1 & 2: Infrastructure Setup
- Add swagger Go dependencies (swag, gin-swagger, files)
- Add Makefile targets for swagger generation and validation
- Add swagger annotations to main.go
- Integrate Swagger UI route at /swagger/*
- Configure .gitignore for auto-generated docs/

Sets up foundation for comprehensive API documentation.
Swagger UI will serve at /swagger/index.html once handlers
are annotated in subsequent commits.

--- a/components/backend/Makefile
+++ b/components/backend/Makefile
@@ -122,6 +122,32 @@ k8s-teardown: ## Teardown local Kubernetes test cluster
 # Pre-commit hooks
 pre-commit: fmt vet test ## Run pre-commit checks
 
+# Swagger documentation targets
+.PHONY: install-swagger swagger swagger-validate swagger-copy
+
+install-swagger: ## Install swaggo/swag CLI tool
+	@echo "Installing swaggo/swag CLI..."
+	go install github.com/swaggo/swag/cmd/swag@latest
+
+swagger: install-swagger ## Generate Swagger documentation
+	@echo "Generating Swagger documentation..."
+	$(shell go env GOPATH)/bin/swag init -g main.go --output ./docs --parseDependency --parseInternal
+	@echo "✓ Swagger docs generated at ./docs/swagger.yaml"
+
+swagger-validate: swagger ## Validate Swagger documentation (fail on warnings)
+	@echo "Validating Swagger documentation..."
+	@if grep -i "warning" docs/swagger.json 2>/dev/null; then \
+		echo "❌ ERROR: Swagger generation produced warnings"; \
+		exit 1; \
+	fi
+	@echo "✓ Swagger validation passed"
+
+swagger-copy: swagger ## Copy OpenAPI spec to docs/api/
+	@echo "Copying OpenAPI spec to docs/api/..."
+	@mkdir -p ../../docs/api
+	cp docs/swagger.yaml ../../docs/api/openapi.yaml
+	@echo "✓ Spec copied to docs/api/openapi.yaml"
+
 # Build information
 version: ## Show version information
 	@echo "Go version: $(shell go version)"
