update backend manifest with oauth route
Signed-off-by: Michael Clifford <mcliffor@redhat.com>

--- a/components/manifests/base/backend-deployment.yaml
+++ b/components/manifests/base/backend-deployment.yaml
@@ -94,6 +94,12 @@ spec:
               name: google-workflow-app-secret
               key: OAUTH_STATE_SECRET
               optional: true
+        - name: BACKEND_URL
+          valueFrom:
+            secretKeyRef:
+              name: google-workflow-app-secret
+              key: BACKEND_URL
+              optional: true
         # OOTB Workflows Configuration
         - name: OOTB_WORKFLOWS_REPO
           value: "https://github.com/ambient-code/ootb-ambient-workflows.git"
