fix backend test workflow
Signed-off-by: Nelesh Singla <117123879+nsingla@users.noreply.github.com>

fixing image paths for minikube deployment

Signed-off-by: Nelesh Singla <117123879+nsingla@users.noreply.github.com>

--- a/.github/workflows/backend-unit-tests.yml
+++ b/.github/workflows/backend-unit-tests.yml
@@ -25,7 +25,7 @@ on:
   pull_request:
     paths:
       - '.github/workflows/backend-unit-tests.yml'
-      - './components/backend/**'
+      - 'components/backend/**'
       - '!**/*.md'
 
 concurrency:
