--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -62,6 +62,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v5
 
+    - name: Cleanup Diskspace
+      id: cleanup
+      uses: kubeflow/pipelines/.github/actions/github-disk-cleanup@master
+      if: (!cancelled())
+
     - name: Validate AGENTS.md symlink
       run: |
         echo "Validating AGENTS.md → CLAUDE.md symlink..."
