fix: Update state-sync context in build and deploy workflows
Modified the context path for the state-sync job in both the components-build-deploy and prod-release-deploy workflows to point directly to the state-sync directory, ensuring correct Dockerfile usage and image deployment.

--- a/.github/workflows/components-build-deploy.yml
+++ b/.github/workflows/components-build-deploy.yml
@@ -85,7 +85,7 @@ jobs:
             dockerfile: ./components/runners/claude-code-runner/Dockerfile
             changed: ${{ needs.detect-changes.outputs.claude-runner }}
           - name: state-sync
-            context: ./components/runners
+            context: ./components/runners/state-sync
             image: quay.io/ambient_code/vteam_state_sync
             dockerfile: ./components/runners/state-sync/Dockerfile
             changed: ${{ needs.detect-changes.outputs.claude-runner }}
