Implement user feedback handling via AG-UI META events
- Added a new endpoint for submitting user feedback, which processes thumbs up/down responses and forwards them to the runner for logging.
- Introduced new data structures for feedback events and payloads, enhancing the feedback submission process.
- Updated the frontend to send feedback to the new endpoint, replacing the previous Langfuse integration.
- Removed obsolete Langfuse client and related configurations from the frontend, streamlining the feedback handling process.

These changes improve the feedback mechanism by leveraging AG-UI META events, ensuring better observability and user experience.

--- a/components/manifests/base/frontend-deployment.yaml
+++ b/components/manifests/base/frontend-deployment.yaml
@@ -31,20 +31,7 @@ spec:
           value: "ambient-code"
         - name: VTEAM_VERSION
           value: "v0.0.7"
-        # Langfuse configuration for user feedback collection
-        # Reads from ambient-admin-langfuse-secret if available
-        - name: LANGFUSE_HOST
-          valueFrom:
-            secretKeyRef:
-              name: ambient-admin-langfuse-secret
-              key: LANGFUSE_HOST
-              optional: true
-        - name: LANGFUSE_PUBLIC_KEY
-          valueFrom:
-            secretKeyRef:
-              name: ambient-admin-langfuse-secret
-              key: LANGFUSE_PUBLIC_KEY
-              optional: true
+        # Note: Langfuse feedback now handled by runner, not frontend
         resources:
           requests:
             cpu: 100m
