--- a/e2e/env.example
+++ b/e2e/env.example
@@ -5,7 +5,11 @@
 # API Keys
 # -----------------------------
 
-# Enable agent testing with Claude API (configures ambient-runner-secrets)
+# Enable agent testing with Claude API
+# This will configure ambient-runner-secrets in:
+# - ambient-code namespace (for platform components)
+# - test-project namespace (for manual local dev testing)
+# For other projects, configure via UI: Project Settings → API Keys
 # ANTHROPIC_API_KEY=sk-ant-api03-your-key-here
 
 # -----------------------------
