refactor: Simplify kind cluster setup and enhance local development workflow
This commit refines the local development process by removing the kind-refresh command and replacing it with a more straightforward kind-down and kind-up sequence. It also eliminates the use of ingress in the kind cluster, opting for NodePort services instead. Additionally, the Makefile has been updated to include a new kind-port-forward command for easier access to services. Documentation has been updated to reflect these changes, improving clarity on accessing the platform and running tests. The Cypress configuration now loads environment variables from .env files, enhancing flexibility for agent testing.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -169,10 +169,10 @@ jobs:
         echo "======================================"
         echo "Loading images into kind cluster..."
         echo "======================================"
-        kind load docker-image quay.io/ambient_code/vteam_frontend:e2e-test --name vteam-e2e
-        kind load docker-image quay.io/ambient_code/vteam_backend:e2e-test --name vteam-e2e
-        kind load docker-image quay.io/ambient_code/vteam_operator:e2e-test --name vteam-e2e
-        kind load docker-image quay.io/ambient_code/vteam_claude_runner:e2e-test --name vteam-e2e
+        kind load docker-image quay.io/ambient_code/vteam_frontend:e2e-test --name ambient-local
+        kind load docker-image quay.io/ambient_code/vteam_backend:e2e-test --name ambient-local
+        kind load docker-image quay.io/ambient_code/vteam_operator:e2e-test --name ambient-local
+        kind load docker-image quay.io/ambient_code/vteam_claude_runner:e2e-test --name ambient-local
         echo "✅ All images loaded into kind cluster"
 
     - name: Update kustomization to use e2e-test images
@@ -192,9 +192,6 @@ jobs:
         echo ""
         echo "Checking services..."
         kubectl get svc -n ambient-code
-        echo ""
-        echo "Checking ingress..."
-        kubectl get ingress -n ambient-code
         
     - name: Run Cypress tests
       working-directory: e2e
