--- a/e2e/env.example
+++ b/e2e/env.example
@@ -5,7 +5,9 @@
 # API Keys
 # -----------------------------
 
-# Enable agent testing with Claude API (configures ambient-runner-secrets)
+# Enable full agent testing with Claude API
+# - Used by Cypress tests for agent session testing
+# - Injected into ambient-runner-secrets for runner pods
 # ANTHROPIC_API_KEY=sk-ant-api03-your-key-here
 
 # -----------------------------
@@ -27,5 +29,4 @@
 # Apply Changes
 # -----------------------------
 # Initial setup: make kind-up
-# After editing .env: make kind-refresh  (fast - ~30 sec)
-# Or full recreate: make kind-down && make kind-up  (slow - ~5 min)
+# After editing .env: make kind-down && make kind-up
