--- a/components/manifests/minikube/frontend-deployment.yaml
+++ b/components/manifests/minikube/frontend-deployment.yaml
@@ -41,7 +41,7 @@ spec:
         - name: GITHUB_APP_SLUG
           value: "ambient-code"
         - name: VTEAM_VERSION
-          value: "v0.0.10-112-g58dbc25"
+          value: "v0.0.19-8-g6d9251e"
         - name: DISABLE_AUTH
           value: "true"
         - name: MOCK_USER
