--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -9,6 +9,12 @@ on:
     types: [labeled]
     branches: [ main, master ]
 
+# Required for pull_request_target to comment on PRs
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 concurrency:
   group: e2e-tests-${{ github.event.pull_request.number }}
   cancel-in-progress: true
@@ -69,6 +75,7 @@ jobs:
 
     steps:
     - name: Add comment to PR
+      continue-on-error: true
       uses: actions/github-script@v7
       with:
         script: |
@@ -242,6 +249,7 @@ jobs:
 
     - name: Comment test result on PR
       if: always()
+      continue-on-error: true
       uses: actions/github-script@v7
       with:
         script: |
