--- a/components/frontend/package.json
+++ b/components/frontend/package.json
@@ -9,13 +9,6 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@ag-ui/client": "^0.0.44",
-    "@copilotkit/react-core": "^1.51.2",
-    "@copilotkit/react-ui": "^1.51.2",
-    "@copilotkit/runtime": "^1.51.2",
-    "@copilotkit/runtime-client-gql": "^1.51.2",
-    "@copilotkit/shared": "^1.51.3",
-    "@copilotkitnext/runtime": "^1.51.2",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -52,6 +45,7 @@
     "sharp": "^0.33.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0",
     "zod": "^3.25.0"
   },
   "devDependencies": {
