reverted claude's edits

--- a/components/manifests/overlays/production/kustomization.yaml
+++ b/components/manifests/overlays/production/kustomization.yaml
@@ -5,7 +5,7 @@ metadata:
   name: vteam-production
 
 # Namespace for all resources (can be overridden with kustomize edit set namespace)
-namespace: myproject
+namespace: ambient-code
 
 # Resources (base + production-specific)
 # github-app-secret.yaml - excluded from automated deployment to prevent overwriting existing secret values
@@ -42,31 +42,31 @@ patches:
 # Production images
 images:
 - name: quay.io/ambient_code/vteam_api_server:latest
-  newName: image-registry.openshift-image-registry.svc:5000/myproject/vteam_api_server
+  newName: quay.io/ambient_code/vteam_api_server
   newTag: latest
 - name: quay.io/ambient_code/vteam_backend
   newName: quay.io/ambient_code/vteam_backend
   newTag: latest
 - name: quay.io/ambient_code/vteam_backend:latest
-  newName: image-registry.openshift-image-registry.svc:5000/myproject/vteam_backend
+  newName: quay.io/ambient_code/vteam_backend
   newTag: latest
 - name: quay.io/ambient_code/vteam_claude_runner
   newName: quay.io/ambient_code/vteam_claude_runner
   newTag: latest
 - name: quay.io/ambient_code/vteam_claude_runner:latest
-  newName: image-registry.openshift-image-registry.svc:5000/myproject/vteam_claude_runner
+  newName: quay.io/ambient_code/vteam_claude_runner
   newTag: latest
 - name: quay.io/ambient_code/vteam_frontend
   newName: quay.io/ambient_code/vteam_frontend
   newTag: latest
 - name: quay.io/ambient_code/vteam_frontend:latest
-  newName: image-registry.openshift-image-registry.svc:5000/myproject/vteam_frontend
+  newName: quay.io/ambient_code/vteam_frontend
   newTag: latest
 - name: quay.io/ambient_code/vteam_operator
   newName: quay.io/ambient_code/vteam_operator
   newTag: latest
 - name: quay.io/ambient_code/vteam_operator:latest
-  newName: image-registry.openshift-image-registry.svc:5000/myproject/vteam_operator
+  newName: quay.io/ambient_code/vteam_operator
   newTag: latest
 - name: quay.io/ambient_code/vteam_public_api
   newName: quay.io/ambient_code/vteam_public_api
@@ -75,6 +75,6 @@ images:
   newName: quay.io/ambient_code/vteam_public_api
   newTag: latest
 - name: quay.io/ambient_code/vteam_state_sync:latest
-  newName: image-registry.openshift-image-registry.svc:5000/myproject/vteam_state_sync
+  newName: quay.io/ambient_code/vteam_state_sync
   newTag: latest
 # PostgreSQL: RHEL image handled via JSON patch (postgresql-json-patch.yaml)
