refactor: update session handling and agent status management
- Removed `package-lock.json` to streamline dependency management.
- Enhanced `AgenticSessionStatus` to include `agentStatus`, reflecting the current state of the agent.
- Updated `sessions.go` to parse and set `agentStatus` based on incoming status updates.
- Improved `agui_proxy.go` to manage `agentStatus` updates for various session events, ensuring accurate real-time status representation.
- Modified frontend components to handle `agentStatus` and integrate new functionalities for `AskUserQuestion` responses, improving user interaction and feedback.

This update enhances the overall session management and user experience by providing clearer status indicators and better handling of interactive questions.

--- a/components/manifests/base/crds/agenticsessions-crd.yaml
+++ b/components/manifests/base/crds/agenticsessions-crd.yaml
@@ -176,6 +176,13 @@ spec:
                 type: string
                 format: date-time
                 description: "Timestamp of last recorded AG-UI activity in this session."
+              agentStatus:
+                type: string
+                enum:
+                - "working"
+                - "idle"
+                - "waiting_input"
+                description: "Current agent run state derived from AG-UI events."
               stoppedReason:
                 type: string
                 enum:
