feat(ambient-api-server): harden gRPC watch handlers, add watch integration tests, and shorten API paths
  - Return proper gRPC status codes instead of fmt.Errorf in watch handlers
  - Add error logging for failed resource lookups during watch streams
  - Use api.DeleteEventType constant instead of magic delete string
  - Add gRPC watch integration tests for projects, users, and projectSettings
  - Rename REST API prefix from /api/ambient-api-server/v1 to /api/ambient/v1
  - Remove deprecated Interactive field from session gRPC handler/presenter

--- a/components/ambient-api-server/templates/service-template.yml
+++ b/components/ambient-api-server/templates/service-template.yml
@@ -281,7 +281,7 @@ objects:
                 memory: ${MEMORY_LIMIT}
             livenessProbe:
               httpGet:
-                path: /api/ambient-api-server
+                path: /api/ambient
                 port: 8000
                 scheme: HTTPS
               initialDelaySeconds: 15
