| #   | Severity | Issue                                   | Fix                                                      |   |-----|----------|-----------------------------------------|----------------------------------------------------------|   | 1   | Critical | -o flag collision get vs create         | Dropped -o alias from create --json                      |   | 2   | Critical | README trailing \                       | Removed                                                  |   | 3   | Major    | Zero-value flags silently ignored       | cmd.Flags().Changed() for max-tokens/temperature/timeout |   | 4   | Major    | config set api_url no validation        | Added url.Parse + scheme/host check                      |   | 5   | Major    | No TLS skip-verify                      | Deferred with TODO — SDK lacks WithHTTPClient            |   | 6   | Major    | access_token undocumented in config get | Added to help text and error message                     |   | 7   | Minor    | cmd/ambient/ doesn't match binary name  | Renamed to cmd/acpctl/, updated all imports              |   | 8   | Minor    | ParseUnverified looks like security bug | Added clarifying comments in both files                  |   | 9   | Minor    | delete session not supported            | Added TODO comment in switch                             |   | 10  | Minor    | test-cli not in CI aggregate            | Added to test-all target                                 |

--- a/components/ambient-cli/Makefile
+++ b/components/ambient-cli/Makefile
@@ -14,7 +14,7 @@ LDFLAGS := -s -w \
 .PHONY: build clean fmt vet lint test
 
 build:
-	go build -ldflags "$(LDFLAGS)" -o $(BINARY) ./cmd/ambient/
+	go build -ldflags "$(LDFLAGS)" -o $(BINARY) ./cmd/acpctl/
 
 clean:
 	rm -f $(BINARY)
