| #   | Issue                     | Action                                                                                                                 |   |-----|---------------------------|------------------------------------------------------------------------------------------------------------------------|   | B-1 | cmd/acpctl/ missing       | Exists locally, stale review                                                                                           |   | C-1 | errcheck disabled         | Kept disabled — all 3 other Go modules (backend, operator, public-api) disable it identically. Added matching comment. |   | M-2 | lint-summary loop fragile | Replaced with direct needs.*.result iteration — no case statement needed                                               |   | M-3 | make lint modifies files  | Removed fmt dependency from lint target                                                                                |   | m-1 | No -race in make test     | Added -race flag                                                                                                       |   | m-2 | Config overrides env vars | Reversed priority: env → config → default (matches kubectl/oc convention). Added TestGetAPIUrlEnvOverridesConfig.      |

--- a/components/ambient-cli/.golangci.yml
+++ b/components/ambient-cli/.golangci.yml
@@ -11,7 +11,7 @@ linters:
     - unused
     - misspell
   disable:
-    - errcheck
+    - errcheck      # Disabled: too many false positives with defer cleanup
 
   settings:
     staticcheck:
