--- a/.github/workflows/go-lint.yml
+++ b/.github/workflows/go-lint.yml
@@ -241,17 +241,22 @@ jobs:
     steps:
       - name: Check overall status
         run: |
-          for job in lint-backend lint-operator lint-ambient-api-server lint-ambient-cli; do
-            result="${{ needs.lint-backend.result }}"
-            case "$job" in
-              lint-operator) result="${{ needs.lint-operator.result }}" ;;
-              lint-ambient-api-server) result="${{ needs.lint-ambient-api-server.result }}" ;;
-              lint-ambient-cli) result="${{ needs.lint-ambient-cli.result }}" ;;
-            esac
+          failed=false
+          for result in \
+            "${{ needs.lint-backend.result }}" \
+            "${{ needs.lint-operator.result }}" \
+            "${{ needs.lint-ambient-api-server.result }}" \
+            "${{ needs.lint-ambient-cli.result }}"; do
             if [ "$result" == "failure" ] || [ "$result" == "cancelled" ]; then
-              echo "$job: $result"
-              echo "Go linting failed"
-              exit 1
+              failed=true
             fi
           done
+          if [ "$failed" == "true" ]; then
+            echo "Go linting failed"
+            echo "  lint-backend: ${{ needs.lint-backend.result }}"
+            echo "  lint-operator: ${{ needs.lint-operator.result }}"
+            echo "  lint-ambient-api-server: ${{ needs.lint-ambient-api-server.result }}"
+            echo "  lint-ambient-cli: ${{ needs.lint-ambient-cli.result }}"
+            exit 1
+          fi
           echo "All Go linting checks passed!"
